src/test/deca/context/invalid/sansObj/not-unaire-int.deca
// Description:
//          Utilisation du not unaire sur un int
//
// Résultat:
//L'opérateur Not doit être utilisé sur un booléen
//
{
    int a = 10;
    if (!a){}
}